Fix iframe bg getting squashed in chrome.

--- a/default.css
+++ b/default.css
@@ -17,6 +17,7 @@
 #body-container {
     position: relative;
 }
+
 iframe { 
     position: absolute;
     pointer-events:none;
@@ -27,13 +28,18 @@ iframe {
     padding: 0;
     margin: 0;
     border: 0;
-    width: 100%; height: 100%;
+    width: 100%; 
+    height: 100%;
+    min-height: 100%;
+    height: auto !important;
     z-index: -1;
+    overflow:hidden;
 }
 
 html, body {
     padding: 0;
     margin: 0;
+    height: 100%;
 }
 
 body * {
